@@ -1,3 +1,8 @@
+2002-07-22  jacob berkman  <jacob@ximian.com>
+
+	* gnome-settings-background.c (gnome_settings_background_load): if
+	nautilus is drawing the desktop, just return
+
 2002-06-19  jacob berkman  <jacob@ximian.com>
 
 	* Makefile.am: fix build
